# FurippuFluid

./: .gitmodules  CMakeLists.txt  FluidVoxel.hpp  MDArray.hpp  README.md  main.cpp  viewer.hpp
.github/workflows/: cmake.yml
